[gd_scene load_steps=15 format=2]

[ext_resource path="res://NAVIGATION/hamScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://NAVIGATION/highArrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://hamburger/hamburger.tscn" type="PackedScene" id=4]
[ext_resource path="res://NAVIGATION/highArrow.gd" type="Script" id=5]
[ext_resource path="res://NAVIGATION/arrow_material.material" type="Material" id=7]
[ext_resource path="res://NAVIGATION/arrow.obj" type="ArrayMesh" id=8]
[ext_resource path="res://NAVIGATION/cupTrigger.gd" type="Script" id=9]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.87451, 0.87451, 0.87451, 1 )
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.909804, 0.690196, 0.101961, 1 )
metallic = 0.52
metallic_specular = 0.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.929412, 0.313726, 0.282353, 1 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="BoxShape" id=6]

[node name="Navigation" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 1 )

[node name="GUIPanel3D" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.380481, 1.79184, -0.27126 )
gui_scene = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.207665, -0.120381, -0.0210475 )
mesh = SubResource( 2 )
material/0 = null

[node name="floorArrows" type="Spatial" parent="."]
visible = false

[node name="floorArrow" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -0.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow2" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -1.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow3" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -2.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow4" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -3.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow5" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -4.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow6" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -5.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow7" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -6.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow8" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -7.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow9" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -8.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow10" type="MeshInstance" parent="floorArrows"]
transform = Transform( 2.99341, -0.0235137, 0.197308, -0.182362, 0.857948, 2.86891, -0.078913, -2.87461, 0.854635, 0, 0.1, -9.5 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow11" type="MeshInstance" parent="floorArrows"]
transform = Transform( -0.147171, -2.87333, 0.849912, -0.182362, 0.857948, 2.86891, -2.99083, 0.0890763, -0.216751, -1.00922, 0.1, -10.1096 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow12" type="MeshInstance" parent="floorArrows"]
transform = Transform( -0.147171, -2.87333, 0.849912, -0.182362, 0.857948, 2.86891, -2.99083, 0.0890763, -0.216751, -2.017, 0.1, -10.11 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow13" type="MeshInstance" parent="floorArrows"]
transform = Transform( -0.147171, -2.87333, 0.849912, -0.182362, 0.857948, 2.86891, -2.99083, 0.0890763, -0.216751, -3.017, 0.1, -10.11 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="floorArrow14" type="MeshInstance" parent="floorArrows"]
transform = Transform( -0.147171, -2.87333, 0.849912, -0.182362, 0.857948, 2.86891, -2.99083, 0.0890763, -0.216751, -4.017, 0.1, -10.11 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.53794, 1.03293, 1.60198 )
width = 13.079
height = 5.849
depth = 14.5353
material = SubResource( 3 )

[node name="CSGBox5" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9526, 1.03293, -8.56593 )
width = 4.79948
height = 5.849
depth = 14.5353
material = SubResource( 3 )

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5334, 1.03293, 3.47466 )
width = 13.079
height = 5.849
depth = 9.0
material = SubResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.26102, 1.2569, -18.6923 )
width = 13.079
height = 5.849
depth = 9.0
material = SubResource( 3 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5293, 1.21965, -13.7993 )
width = 13.079
height = 5.849
depth = 17.6296
material = SubResource( 3 )

[node name="cupboard" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.59872, 0.884179, -9.6686 )
height = 3.20094
material = SubResource( 4 )

[node name="cupEnd" type="MeshInstance" parent="."]
transform = Transform( -0.0541661, 0, 0.998532, 0, 1, 0, -0.998532, 0, -0.0541661, -7.66442, 1.32916, -9.37479 )
mesh = SubResource( 5 )
material/0 = null
script = ExtResource( 9 )

[node name="Area" type="Area" parent="cupEnd"]

[node name="CollisionShape" type="CollisionShape" parent="cupEnd/Area"]
shape = SubResource( 6 )

[node name="endMessage" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.027
anchor_top = 0.047
anchor_right = 0.027
anchor_bottom = 0.047
margin_left = 321.352
margin_top = 180.8
margin_right = 631.352
margin_bottom = 233.8
visible_characters = 123
tab_size = 12
text = "Congatulations on reaching your destination. Navigation has concluded."
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="highArrow" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.29997, 0, 0.00424625, 0, 0.3, 0, -0.00424625, 0, 0.29997, 0, 0, 0 )
visible = false
script = ExtResource( 5 )
